# kapitali

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  kapitali-blueprint.md  package.json
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: chat.py  documents.py  entities.py
backend/app/core/: config.py
backend/app/services/: ingestion.py  rag.py
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/layout/: sidebar-provider.tsx  sidebar.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  input.tsx  scroll-area.tsx  separator.tsx
frontend/src/lib/: api.ts  utils.ts
